[gd_scene load_steps=7 format=3 uid="uid://c1byku3gkja0i"]

[ext_resource type="Script" path="res://scenes/interface/main_menu/main_menu.gd" id="1_f1jo2"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rbtj5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b72jp"]

[sub_resource type="Animation" id="Animation_mpgf1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SteamPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SteamNotRunningMessage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LogMessage:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Title:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VersionMessage:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5dr3r"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SteamPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SteamNotRunningMessage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LogMessage:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Title:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VersionMessage:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rrkmg"]
_data = {
"RESET": SubResource("Animation_mpgf1"),
"show": SubResource("Animation_5dr3r")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1jo2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="SteamPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 245.0
offset_bottom = 63.0

[node name="SteamAvatar" type="TextureRect" parent="SteamPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -19.5
offset_right = 45.0
offset_bottom = 20.5
grow_vertical = 2
texture = SubResource("NoiseTexture2D_rbtj5")
expand_mode = 1

[node name="SteamName" type="Label" parent="SteamPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 52.0
offset_top = -13.5
offset_right = 232.0
offset_bottom = 9.5
grow_vertical = 2
text = "AAAAAAAAAAAAAA"

[node name="SteamNotRunningMessage" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 385.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "STEAM NOT RUNNING, TO PLAY RUN THE STEAM"

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 338.0
offset_right = 689.0
offset_bottom = 630.0

[node name="Play" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(672, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_b72jp")
disabled = true
text = "   ENTRAR EM PARTIDA"
alignment = 0

[node name="Play2" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(672, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_b72jp")
disabled = true
text = "   CRIAR PARTIDA"
alignment = 0

[node name="CharacterCreator" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(672, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_b72jp")
text = "   CRIADOR DE PERSONAGENS"
alignment = 0

[node name="Quit" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(672, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_b72jp")
text = "   FECHAR"
alignment = 0

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1132.0
offset_top = 155.0
offset_right = -418.0
offset_bottom = 320.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 120
text = "SOU DI NAIT"

[node name="LogMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 300.0
offset_right = 653.0
offset_bottom = 322.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 15
text = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa"

[node name="VersionMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 992.0
offset_top = 616.0
offset_right = 1144.0
offset_bottom = 639.0
text = "VERSÃO PRÉ-ALPHA"

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rrkmg")
}
autoplay = "show"

[connection signal="mouse_entered" from="ButtonContainer/Play" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="ButtonContainer/Play2" to="." method="_on_button_mouse_entered"]
[connection signal="button_up" from="ButtonContainer/CharacterCreator" to="." method="_on_character_creator_button_up"]
[connection signal="mouse_entered" from="ButtonContainer/CharacterCreator" to="." method="_on_button_mouse_entered"]
[connection signal="button_up" from="ButtonContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="ButtonContainer/Quit" to="." method="_on_button_mouse_entered"]
